--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ats-resume-saas",
   "private": true,
   "dependencies": {
+    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mammoth": "^1.6.0",
     "multer": "^1.4.5-lts.1",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "mammoth": "^1.6.0"
   }
 }
