--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "ats-resume-saas",
+  "name": "ats-backend",
   "private": true,
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "multer": "^1.4.5-lts.1",
-    "pdf-parse": "^1.1.1",
-    "mammoth": "^1.6.0"
+    "cors": "^2.8.5"
   }
 }
