--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,18 @@
-# ===== Node =====
+# dependencies
 node_modules/
+
+# next.js build
+.next/
+out/
+
+# env files
+.env
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# ===== Environment Variables =====
-.env
-.env.local
-.env.production
-
-# ===== Next.js =====
-.next/
-out/
-.vercel/
-
-# ===== Backend Uploads =====
-uploads/
-*.pdf
-*.docx
-
-# ===== OS Files =====
+# OS files
 .DS_Store
 Thumbs.db
-
-# ===== Logs =====
-logs/
-*.log
