--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.19.2",
+    "groq-sdk": "^0.37.0",
     "mammoth": "^1.6.0",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.28.0",
